# pydantic-essentials

./: pyproject.toml
hmd/: hmd_creating_a_pydantic_model.ipynb
